# invoice-extractor

./: .gitignore  .prototools  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: architecture.md
go/: .env.example  README.md  go.mod  go.sum
go/cmd/bench/: main.go
go/cmd/server/: main.go
go/cmd/visioncheck/: main.go
go/internal/config/: config.go
go/internal/httpapi/: handler.go
go/internal/ollama/: client.go
go/internal/pdftext/: pdftext.go
go/internal/pipeline/: pipeline.go
go/internal/postprocess/: postprocess.go  postprocess_test.go
go/internal/prompts/: prompts.go
go/internal/rasterize/: rasterize.go
go/internal/schema/: invoice.go
go/internal/scoring/: scoring.go  scoring_test.go
go/testdata/labels/: synthetic_invoice_scan.json
python/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
python/app/: __init__.py  config.py  main.py  ollama_client.py  pdf_text.py  pipeline.py  postprocess.py  prompts.py  rasterize.py  schema.py  scoring.py
python/scripts/: bench.py  make_synthetic_fixture.py  vision_check.py
python/tests/: _synthetic.py  conftest.py  test_documents.py  test_parse.py  test_postprocess.py  test_scoring.py
python/tests/labels/: synthetic_invoice.json
python/web/: index.html
scripts/: pull_models.sh  setup_env.sh
