[project]
name = "invoice-extractor"
version = "0.1.0"
description = "Local, self-hosted invoice OCR -> schema-validated JSON via Ollama."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",   # file uploads for /extract
    "httpx>=0.27",               # Ollama HTTP client (kept plain so a Go rewrite is trivial)
    "pymupdf>=1.24",             # PDF text-layer detection + extraction
    "pdf2image>=1.17",           # rasterize PDF pages (needs poppler-utils on the system)
    "pillow>=10.0",              # load/normalize images for the vision path
    "python-dateutil>=2.9",      # tolerant date parsing in postprocess
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",            # generate synthetic invoice fixtures for smoke tests
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
